[gd_scene load_steps=7 format=2]

[ext_resource path="res://enemies/BaseEnemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://enemies/tank/Tank.gd" type="Script" id=2]
[ext_resource path="res://resources/stats/tank/tank_base_stats.tres" type="Resource" id=3]
[ext_resource path="res://assets/tank/enemyBlack4.png" type="Texture" id=4]
[ext_resource path="res://enemies/tank/states/Idle.gd" type="Script" id=5]
[ext_resource path="res://enemies/tank/states/EjectBomb.gd" type="Script" id=6]

[node name="Tank" index="0" instance=ExtResource( 1 )]
collision_layer = 2
script = ExtResource( 2 )
base_stats = ExtResource( 3 )

[node name="EnemyGui" parent="." index="1"]
margin_left = -38.9598
margin_top = -71.2517
margin_right = 152.04
margin_bottom = -22.2517
rect_scale = Vector2( 0.4, 0.4 )

[node name="Sprite" parent="." index="2"]
scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 4 )

[node name="CollisionPolygon2D" parent="." index="3"]
polygon = PoolVector2Array( -21.9036, -45.9874, -44.7766, -32.8953, -44.7766, 21.9203, -15.78, 38.6033, -12.2193, 45.9438, 11.9558, 46.3956, 15.2027, 39.3977, 45.1886, 22.0702, 44.4375, -32.2184, 20.1542, -46.9887, 8.45008, -45.2089, 8.8473, -35.6758, -8.23292, -35.2786, -9.30187, -44.7424 )

[node name="Idle" type="Node" parent="States" index="0"]
script = ExtResource( 5 )

[node name="Timer" type="Timer" parent="States/Idle" index="0"]
wait_time = 4.0
one_shot = true

[node name="EjectBomb" type="Node" parent="States" index="1"]
script = ExtResource( 6 )

[node name="BombLauncher" type="Position2D" parent="States/EjectBomb" index="0"]
[connection signal="area_entered" from="." to="." method="_on_Tank_area_entered"]
[connection signal="timeout" from="States/Idle/Timer" to="States/Idle" method="_on_Timer_timeout"]
